<resources>
    <string name="app_name">CCS2 Android HMI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_ac_meter_information">AC Meter Information</string>
    <string name="lbl_firmware_version_information">Firmware Version Information</string>
    <string name="lbl_dc_output_information">DC Output Information</string>
    <string name="lbl_charging_summary">Charging Summary</string>
    <string name="lbl_charging_history">Charging History</string>
    <string name="lbl_gun_state_info">Gun State Info.</string>
    <string name="lbl_fault_information">Fault Information</string>
    <string name="lbl_plc_faults">PLC Faults</string>
    <string name="lbl_rectifier_faults">Rectifier Faults</string>
    <string name="lbl_communication_error">Communication Error</string>
    <string name="lbl_miscellaneous_error">Miscellaneous Error</string>
    <string name="lbl_device_connection_status">Device Connection Status</string>
    <string name="lbl_communication_failure">Communication Failure</string>
    <string name="lbl_rectifier_fault_information">Rectifier Fault Information</string>
    <string name="lbl_status">Status</string>
    <string name="lbl_error_code">Error Code</string>
    <string name="lbl_fault_type_information">Fault Type Information</string>
    <string name="lbl_plc_communication_error">PLC Communication Error</string>
    <string name="lbl_rectifier_communication_error">Rectifier Communication Error</string>
    <string name="lbl_ocpp_communication_error">OCPP Communication Error</string>
    <string name="lbl_modbus_master_communication_error">Modbus Master Communication Error</string>
    <string name="lbl_rfid_module">RFID Module</string>
    <string name="lbl_led_module">LED Module</string>
    <string name="lbl_ac_meter">AC Meter</string>
    <string name="lbl_dc_meter_1">DC Meter 1</string>
    <string name="lbl_dc_meter_2">DC Meter 2</string>
    <string name="lbl_ev_mac_address">EV Mac Address</string>
    <string name="lbl_sample_ev_mac_address">AB-CD-EF-GH-IJ-KL-MN-OP</string>
    <string name="lbl_charging_duration">Charging Duration</string>
    <string name="lbl_charging_start_date_time"><![CDATA[Charging Start Date & Time]]></string>
    <string name="lbl_charging_end_date_time"><![CDATA[Charging End Date & Time]]></string>
    <string name="lbl_start_soc">Start SoC</string>
    <string name="lbl_end_soc">End SoC</string>
    <string name="lbl_energy_consumption">Energy Consumption</string>
    <string name="lbl_session_end_reason">Session End Reason</string>
    <string name="lbl_initial_soc">Initial SOC</string>
    <string name="lbl_demand_voltage">Demand Voltage</string>
    <string name="lbl_demand_current">Demand Current</string>
    <string name="lbl_charging_voltage">Charging Voltage</string>
    <string name="lbl_charging_current">Charging Current</string>
    <string name="lbl_charging_soc">Charging SOC</string>
    <string name="lbl_duration_hh_mm">Duration (hh:mm)</string>
    <string name="lbl_dc_meter_information">DC Meter Information</string>
    <string name="lbl_voltage">Voltage</string>
    <string name="lbl_current">Current</string>
    <string name="lbl_power">Power</string>
    <string name="lbl_import_energy">Import Energy</string>
    <string name="lbl_export_energy">Export Energy</string>
    <string name="lbl_max_voltage">Max Voltage</string>
    <string name="lbl_min_voltage">Min Voltage</string>
    <string name="lbl_max_current">Max Current</string>
    <string name="lbl_min_current">Min Current</string>
    <string name="lbl_device_type">Device Type</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_mcu">MCU</string>
    <string name="lbl_ocpp">OCPP</string>
    <string name="lbl_rfid">RFID</string>
    <string name="lbl_led">LED</string>
    <string name="lbl_plc_1">PLC 1</string>
    <string name="lbl_plc_2">PLC 2</string>
    <string name="lbl_v">V</string>
    <string name="lbl_hz">Hz</string>
    <string name="lbl_a">A</string>
    <string name="lbl_kw">kw</string>
    <string name="lbl_kwh">kWh</string>
    <string name="lbl_fault_indication">Fault Indication</string>
    <string name="lbl_charging_in_process">Charging in Process</string>
    <string name="lbl_gun_plugged">Gun plugged</string>
    <string name="lbl_fault">Fault</string>
    <string name="lbl_gun_unplugged">Gun Unplugged</string>
    <string name="lbl_charging_completed">Charging completed</string>
    <string name="lbl_click_here_for_more">Click here for More</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_voltage_v1n">Voltage V1N</string>
    <string name="lbl_voltage_v2n">Voltage V2N</string>
    <string name="lbl_voltage_v3n">Voltage V3N</string>
    <string name="lbl_current_i1">Current I1</string>
    <string name="lbl_current_i2">Current I2</string>
    <string name="lbl_current_i3">Current I3</string>
    <string name="lbl_avg_voltage_ln">Avg Voltage LN</string>
    <string name="lbl_avg_current">Avg Current</string>
    <string name="lbl_frequency_hz">Frequency (Hz)</string>
    <string name="lbl_active_power">Active Power</string>
    <string name="lbl_total_power">Total Power</string>
    <string name="lbl_total_export_energy">Total Export Energy</string>
    <string name="lbl_gun_1">GUN - 1</string>
    <string name="lbl_gun_2">GUN - 2</string>
    <string name="lbl_percentage">%</string>
    <string name="lbl_min">Min</string>
    <string name="cd_back">Back</string>
    <string name="lbl_rectifier_1">Rectifier 1:</string>
    <string name="lbl_rectifier_2">Rectifier 2:</string>
    <string name="lbl_rectifier_3">Rectifier 3:</string>
    <string name="lbl_rectifier_4">Rectifier 4:</string>
    <string name="lbl_device_information">Device Information</string>
    <string name="msg_dialog_home_screen">To start the authentication process or view detailed parameter information, tap a specific gun icon.</string>
    <string name="lbl_no_charging_history">No Charging History</string>
    <string name="lbl_emergency_stop">Emergency Stop</string>
    <string name="gun_1_info">GUN - 1 \n<b>(%1$s)</b></string>
    <string name="gun_2_info">GUN - 2 \n<b>(%1$s)</b></string>
    <string name="lbl_plugged_in">(Plugged In)</string>
    <string name="hint_00_00">00:00</string>
    <string name="hint_mac_address">00–00–00–00–00–00–00–00</string>
    <string name="hint_date_time">00/01/1900 00:00:00</string>
    <string name="hint_float">0.00</string>
    <string name="hint_0">0</string>
    <string name="lbl_gun_charging_soc">Charging SoC = %1$d%%</string>
    <string name="lbl_gun_charging_voltage">Charging Voltage(V) = %1$d</string>
    <string name="lbl_gun_charging_current">Charging Current(A) = %1$d</string>
    <string name="lbl_gun_charging_duration">Duration = %1$s</string>
    <string name="lbl_gun_energy_consumption">%1$.3f kWh</string>
    <string name="lbl_gun_total_cost">Total Cost = ₹%1$.2f</string>
    <string name="lbl_gun_total_cost_in_rs">₹%1$.2f</string>
    <string name="lbl_unit_price_per_kw">Unit Price = ₹%1$.2f / kWh</string>
    <string name="lbl_gun_1_charging_status">GUN - 1 Charging Status</string>
    <string name="lbl_gun_2_charging_status">GUN - 2 Charging Status</string>
    <string name="lbl_local_start_or_stop_charging">Local Start/Stop Charging</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_start_gun_1">Start Gun-1</string>
    <string name="lbl_stop_gun_1">Stop Gun-1</string>
    <string name="lbl_start_gun_2">Start Gun-2</string>
    <string name="lbl_stop_gun_2">Stop Gun-2</string>
    <string name="msg_invalid_password">Invalid Password</string>
    <string name="lbl_test_mode">Test Mode</string>
    <string name="lbl_output_on">Output On</string>
    <string name="lbl_output_off">Output Off</string>
    <string name="lbl_voltage_v">Voltage(v)</string>
    <string name="lbl_current_a">Current(A)</string>
    <string name="hint_between_200_1000v">between 200 – 1000V</string>
    <string name="hint_between_0_100a">between 0 – 100A</string>
    <string name="message_device_communication_error">Device Communication Error</string>
    <string name="lbl_gun_2_loading">Gun - 2 (Loading…)</string>
    <string name="lbl_gun_1_loading">Gun - 1 (Loading…)</string>
    <string name="lbl_serial_number">Sr. No.</string>
    <string name="lbl_error_status">Error Status</string>
    <string name="lbl_error_desc">Error description</string>
    <string name="lbl_authorize_for_local_start_stop">Authorize for Local Start/Stop</string>
    <string name="hint_enter_your_6_digit_pin">Enter your 6-digit PIN</string>
    <string name="cd_servotech_logo">servotech logo</string>
    <string name="cd_server_icon">server icon</string>
    <string name="cd_ethernet_icon">ethernet icon</string>
    <string name="cd_gsm_icon">gsm icon</string>
    <string name="cd_wifi_icon">wifi icon</string>
    <string name="lbl_error_source">Error Source</string>
    <string name="lbl_no_faults_detected">No Faults Detected</string>
    <string name="lbl_pin_otp_for_session_authorization">PIN/OTP for Session Authorization</string>
    <string name="hint_enter_your_pin">Enter your PIN</string>
    <string name="message_invalid_empty_pin">Invalid/Empty PIN</string>
    <string name="message_please_input_voltage_between_200_to_1000_v">Please input voltage between 200 to 1000 V</string>
    <string name="message_please_input_current_between_0_to_100_a">Please input current between 0 to 100 A</string>
    <string name="msg_permission_granted">Permission Granted</string>
    <string name="msg_permission_not_granted">Storage permission is required to export charging history.</string>
    <string name="csv_row_headers" formatted="false">Sr No.,GunId,EV Mac Address,Charging Start Time,Charging End Time,Total Charging Time(mins),Start SoC(%),End SoC(%),Energy Consumption(kWh),Session End Reason</string>
    <string name="msg_file_saved_successfully">File saved successfully</string>
    <string name="msg_failed_to_create_file">Failed to create file</string>
    <string name="msg_failed_to_save_file">Failed to save file</string>
    <string name="msg_external_storage_not_writable">External storage not writable</string>
    <string name="lbl_yes">Yes</string>
    <string name="lbl_no">No</string>
    <string name="msg_are_you_sure_to_delete">Do you want to delete the charging history from the app as you have exported it in CSV?.</string>
    <string name="lbl_gun_temp_dc_positive">Gun Temperature DC+</string>
    <string name="lbl_gun_temp_dc_negative">Gun Temperature DC-</string>
    <string name="lbl_celsius">°C</string>
    <string name="msg_internet_connection_unavailable">Internet connection unavailable.</string>
    <string name="lbl_charger_ninoperative">CHARGER\nINOPERATIVE</string>
    <string name="msg_charger_is_inoperative">Charger is inoperative.</string>
    <string name="lbl_no_notifications_found">No Notifications Found.</string>
    <string name="lbl_notifications">Notifications</string>
    <string name="lbl_total_cost">Total Cost</string>
    <string name="title_authorize_for_local_start_stop">Authorize for Local Start/Stop</string>
    <string name="title_authorize_for_test_mode">Authorize for Test Mode</string>
    <string name="msg_evseready_app_not_installed">EVSEReady App Not Installed</string>
    <string name="lbl_error_time">Error Time</string>
    <string name="msg_to_inform_about_dual_socket">Both guns should be in PLUGGED IN to start dual socket mode.</string>
    <string name="msg_to_confirm_to_switch_to_dual_socket">Are you sure you want to switch to dual socket mode?</string>
    <string name="lbl_select_session_mode">Select Session Mode By</string>
    <string name="lbl_by_soc">SoC</string>
    <string name="lbl_by_time">Time</string>
    <string name="lbl_by_energy">Energy</string>
    <string name="lbl_by_auto">Auto</string>
    <string name="hint_enter_value">Enter value</string>
</resources>