<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/dialogBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_15sdp">

        <TextView
            android:id="@+id/tvGunsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_select_session_mode"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <GridLayout
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:paddingHorizontal="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:columnCount="2"
            android:rowCount="2">

            <RadioButton
                android:id="@+id/radioByAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_by_auto"
                android:textSize="@dimen/_12ssp" />

            <RadioButton
                android:id="@+id/radioByTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_by_time"
                android:textSize="@dimen/_12ssp" />

            <RadioButton
                android:id="@+id/radioBySoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_by_soc"
                android:textSize="@dimen/_12ssp" />

            <RadioButton
                android:id="@+id/radioByEnergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_by_energy"
                android:textSize="@dimen/_12ssp" />

        </GridLayout>

        <EditText
            android:id="@+id/edtSessionModeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/dialogBackground"
            android:focusable="true"
            android:gravity="center"
            android:hint="@string/hint_enter_value"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:visibility="visible"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:singleLine="true"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnClose"
                style="@style/CommonButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/lbl_close"
                android:textSize="@dimen/_8ssp" />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/CommonButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/lbl_submit"
                android:textSize="@dimen/_8ssp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

