<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_20sdp"
    android:paddingHorizontal="@dimen/_30sdp"
    tools:context=".views.fragment.FaultInfoFragment">

    <include
        android:id="@+id/incHeader"
        layout="@layout/common_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg_black_rect_with_white_border"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:text="@string/lbl_plc_faults"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_black_rect_with_white_border"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:text="@string/lbl_rectifier_faults"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_black_rect_with_white_border"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:text="@string/lbl_communication_error"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_black_rect_with_white_border"
        android:gravity="center_horizontal"
        android:padding="@dimen/_10sdp"
        android:text="@string/lbl_miscellaneous_error"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp" />

</LinearLayout>