<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/dialogBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvGunsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_authorize_for_local_start_stop"
            android:textSize="@dimen/_12ssp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="?attr/dialogBackground"
            android:gravity="center"
            android:hint="@string/hint_enter_your_6_digit_pin"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:padding="@dimen/_10sdp"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:textColorHint="@color/light_grey"
            android:focusable="true"
            android:textSize="@dimen/_10ssp" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/CommonButtonTheme"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:text="@string/lbl_submit"
            android:textSize="@dimen/_8ssp" />

    </LinearLayout>

</RelativeLayout>